// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomTextInput android renders in a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomTextInput
    defaultText={null}
    onSubmitEditing={[Function]}
    returnKeyType={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "onChangeText": [Function],
      "onSubmitEditing": [Function],
      "returnKeyType": null,
      "style": Object {
        "color": "#212121",
      },
      "underlineColorAndroid": "#BDBDBD",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "onChangeText": [Function],
        "onSubmitEditing": [Function],
        "returnKeyType": null,
        "style": Object {
          "color": "#212121",
        },
        "underlineColorAndroid": "#BDBDBD",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CustomTextInput ios renders in a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomTextInput
    defaultText={null}
    onSubmitEditing={[Function]}
    returnKeyType={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TextInput
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType={null}
        style={
          Object {
            "color": "#212121",
          }
        }
        underlineColorAndroid="transparent"
      />,
      "style": Object {
        "borderBottomColor": "#BDBDBD",
        "borderBottomWidth": 1,
        "marginBottom": 8,
        "marginTop": 8,
        "paddingBottom": 8,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "onChangeText": [Function],
        "onSubmitEditing": [Function],
        "returnKeyType": null,
        "style": Object {
          "color": "#212121",
        },
        "underlineColorAndroid": "transparent",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType={null}
          style={
            Object {
              "color": "#212121",
            }
          }
          underlineColorAndroid="transparent"
        />,
        "style": Object {
          "borderBottomColor": "#BDBDBD",
          "borderBottomWidth": 1,
          "marginBottom": 8,
          "marginTop": 8,
          "paddingBottom": 8,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onChangeText": [Function],
          "onSubmitEditing": [Function],
          "returnKeyType": null,
          "style": Object {
            "color": "#212121",
          },
          "underlineColorAndroid": "transparent",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
